--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
+                <!--动作-->
                 <action android:name="android.intent.action.MAIN" />
-
+                <!--分类-->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".activity.CycleActivity"></activity>
     </application>
 
 </manifest>
