--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ll.test"
     android:configChanges="screenSize|orientation|keyboardHidden">
+    <!-- false强制性的缩放-->
+    <!--<supports-screens-->
+    <!--android:largeScreens="false"-->
+    <!--android:smallScreens="false"></supports-screens>-->
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -17,9 +21,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".save.MyFragmentPreferenceActivity" />
+        <!--android:windowSoftInputMode="stateVisible|adjustResize"-->
         <activity
-            android:name=".show.MyActivity"
+            android:name=".tts.SpeakTest"
             android:screenOrientation="portrait">
             <!--android:uiOptions="splitActionBarWhenNarrow"拆分操作栏-->
             <intent-filter>
