--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:23.4.0'
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
@@ -10,6 +13,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        //ADD THIS LINE:
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -23,4 +29,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+
+    //ADD THESE LINES:
+    // Android JUnit Runner
+    androidTestCompile("com.android.support.test:runner:0.5")
+            { exclude group: 'com.android.support' }
+    // JUnit4 Rules
+    androidTestCompile("com.android.support.test:rules:0.5")
+            { exclude group: 'com.android.support' }
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
