--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <!--硬件加速-->
     <!--android:hardwareAccelerated="true"-->
+    <!--指定硬件加速时必须的-->
+    <uses-feature android:name="android.hardware.sensor.accelerometer" />
     <application
         android:name=".app.app"
         android:allowBackup="true"
@@ -30,7 +32,7 @@
         <!--键盘弹出-->
         <!--android:windowSoftInputMode="stateVisible|adjustResize"-->
         <activity
-            android:name=".draw.MyActivity"
+            android:name=".draw.GLSurfaceViewActivity"
             android:screenOrientation="portrait">
             <!--android:uiOptions="splitActionBarWhenNarrow"拆分操作栏-->
             <intent-filter>
@@ -120,7 +122,11 @@
         <service
             android:name=".service.ServivceTest"
             android:enabled="true"
-            android:permission="con.ll.LL" />
+            android:permission="con.ll.LL" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
