--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+
+    <!--goole地图权限-->
+    <!--用户位置的精度等级-->
+    <!--fine权限自动获取coarse权限-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!--震动-->
     <uses-permission android:name="android.permission.VIBRATE" />
     <!--硬件加速-->
@@ -32,7 +38,7 @@
         <!--键盘弹出-->
         <!--android:windowSoftInputMode="stateVisible|adjustResize"-->
         <activity
-            android:name=".draw.GLSurfaceViewActivity"
+            android:name=".map.MapTest"
             android:screenOrientation="portrait">
             <!--android:uiOptions="splitActionBarWhenNarrow"拆分操作栏-->
             <intent-filter>
