--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,6 +109,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="APPLICATION_CLASS_NAME"
+            android:value="com.android.MyApplication" />
         <!--单元测试-->
         <activity android:name=".testunit.MainActivity" />
         <activity android:name=".save.MyFragmentPreferenceActivity" />
@@ -116,7 +119,7 @@
         <!--android:windowSoftInputMode="stateVisible|adjustResize"-->
         <!--设置activity权限-->
         <activity
-            android:name=".MainActivity"
+            android:name=".web.WebTest"
             android:screenOrientation="portrait">
             <!--android:permission="com.ll.LL"-->
             <!--android:uiOptions="splitActionBarWhenNarrow"拆分操作栏-->
@@ -172,7 +175,7 @@
             android:name="com.test.tmpcontacts"
             android:clearTaskOnLaunch="true"
             android:launchMode="singleTask"
-            android:targetActivity=".TestActivity" >
+            android:targetActivity=".TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.CREATE_SHORTCUT" />
 
