--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,16 +35,20 @@ android {
 //    }
 //}
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:support-v4:+'
+    compile 'com.zhy:base-adapter:2.0.0'
     //ADD THESE LINES:
     // Android JUnit Runner
-    androidTestCompile("com.android.support.test:runner:0.5")
-            { exclude group: 'com.android.support' }
+    androidTestCompile('com.android.support.test:runner:0.5') {
+        exclude group: 'com.android.support'
+    }
     // JUnit4 Rules
-    androidTestCompile("com.android.support.test:rules:0.5")
-            { exclude group: 'com.android.support' }
+    androidTestCompile('com.android.support.test:rules:0.5') {
+        exclude group: 'com.android.support'
+    }
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
