--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,8 +99,10 @@
     <!--PackageManager packageManager=getPackageManager();
         packageManager.hasSystemFeature(PackageManager.FEATURE_SENSOR_COMPASS);-->
 
-    <!--sd卡写权限-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--&lt;!&ndash;sd卡写权限&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+    <!--&lt;!&ndash;在SDCard中创建与删除文件权限 &ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />-->
     <application
         android:name=".app.app"
         android:allowBackup="true"
@@ -119,7 +121,7 @@
         <!--android:windowSoftInputMode="stateVisible|adjustResize"-->
         <!--设置activity权限-->
         <activity
-            android:name=".ndk.NDKActivity"
+            android:name=".java.TestJavaActivity"
             android:screenOrientation="portrait">
             <!--android:permission="com.ll.LL"-->
             <!--android:uiOptions="splitActionBarWhenNarrow"拆分操作栏-->
